wordpress-defenition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-server
  labels:
    app : sample
    tier : front-end
spec:
  template:
    metadata:
      name: wordpress
      labels:
        app : sample
        tier : front-end
    spec:
      containers:
      - name : wordpress-container
        image : wordpress:php7.2-apache
        ports:
        - containerPort: 80
  replicas: 2
  selector:
    matchLabels:
      tier: front-end
      app: sample
